<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            app:strokeColor="#E5E7EB"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/card_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/back" />

        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_heading_one"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_heading_two"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/greyColor"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:inputType="textEmailAddress"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/email"
                android:padding="15dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"

            app:boxStrokeErrorColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"

            app:hintTextColor="@color/secondaryColor"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/login_sign_in"
            android:backgroundTint="@color/buttonColor"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:cornerRadius="15dp" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:gravity="center">

            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginEnd="20dp"
                android:background="@color/lightGray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_or"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="@color/lightGray" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/google"
                android:layout_width="165dp"
                android:layout_height="55dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:strokeColor="#E5E7EB"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/google" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/apple"
                android:layout_width="165dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:strokeColor="#E5E7EB"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/apple" />
            </com.google.android.material.card.MaterialCardView>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center|bottom">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_empty_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black"

                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primaryColor"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>


    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.coordinatorlayout.widget.CoordinatorLayout>