<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragment.OtpFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#E5E7EB"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/card_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/back" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/otp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:text="@string/otp_heading_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/card"

        app:layout_constraintTop_toBottomOf="@id/card" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/otp_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/otp_heading_two"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/greyColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_title" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        style="@style/PinWidget.PinView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:cursorVisible="true"
        android:gravity="center"
        android:inputType="number"
        android:itemBackground="@drawable/otp"
        app:itemCount="5"
        app:itemHeight="60dp"
        app:itemRadius="14dp"
        app:itemSpacing="12dp"
        app:itemWidth="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_subtitle"
        app:lineColor="#F9FAFB"
        app:lineWidth="0dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/otp_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/otp_resend"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/greyColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:text="@string/otp_confirm"
        android:backgroundTint="@color/lightButtonColor"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/otp_resend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="15dp" />
</androidx.constraintlayout.widget.ConstraintLayout>