<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragment.SignUpFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp"
        app:strokeColor="#E5E7EB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/card_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/back" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_heading_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"

        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title"
        app:layout_constraintStart_toStartOf="@id/sign_up_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="0dp"
        android:layout_marginHorizontal="25dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:inputType="textEmailAddress"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/email"
            android:padding="15dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/login_sign_up"
        android:backgroundTint="@color/lightButtonColor"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:cornerRadius="15dp" />

    <TableRow
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:id="@+id/or"
        android:gravity="center">

        <View
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_marginEnd="20dp"
            android:background="@color/lightGray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="@color/lightGray" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:id="@+id/device"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="@id/or"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/google"
            android:layout_width="165dp"
            android:layout_height="55dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:strokeColor="#E5E7EB"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/google" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/apple"
            android:layout_width="165dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:strokeColor="#E5E7EB"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/apple" />
        </com.google.android.material.card.MaterialCardView>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/device"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_second_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"

            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>





</androidx.constraintlayout.widget.ConstraintLayout>